# cord-concept

./: Cargo.toml  README.md
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  lib.rs  service.rs
pallets/pallet-credential/: .gitignore  Cargo.toml  README.md  types.json
pallets/pallet-credential/src/: lib.rs  mock.rs  tests.rs
pallets/pallet-did/: Cargo.toml
pallets/pallet-did/src/: lib.rs  mock.rs
pallets/pallet-schema/: Cargo.toml  README.md  types.json
pallets/pallet-schema-old/: Cargo.toml
pallets/pallet-schema-old/src/: lib.rs  mock.rs  tests.rs
pallets/pallet-schema/src/: lib.rs  tests.rs
pallets/registrar/: Cargo.toml
pallets/registrar/src/: lib.rs
pallets/schema/: Cargo.toml
pallets/schema/src/: lib.rs  tests.rs
pallets/substrate-validator-set/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
