[package]
authors = ['Dhiway<info@dhiway.com>']
edition = '2018'
name = 'cord-runtime'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

pallet-aura = { default-features = false, version = '2.0.0' }
pallet-balances = { default-features = false, version = '2.0.0' }

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.1'

frame-executive = { default-features = false, version = '2.0.0' }
frame-support = { default-features = false, version = '2.0.0' }
pallet-grandpa = { default-features = false, version = '2.0.0' }

pallet-randomness-collective-flip = { default-features = false, version = '2.0.0' }

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

sp-session = { default-features = false, version = '2.0.0' }
sp-api = { default-features = false, version = '2.0.0' }
sp-block-builder = { default-features = false, version = '2.0.0' }
sp-consensus-aura = { default-features = false, version = '0.8.0' }
sp-core = { default-features = false, version = '2.0.0' }
sp-inherents = { default-features = false, version = '2.0.0' }


[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

sp-offchain = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
sp-session = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, version = '2.0.0' }
sp-transaction-pool = { default-features = false, version = '2.0.0' }
sp-version = { default-features = false, version = '2.0.0' }



frame-system = { default-features = false, version = '2.0.0' }

pallet-sudo = { default-features = false, version = '2.0.0' }
pallet-timestamp = { default-features = false, version = '2.0.0' }
pallet-transaction-payment = { default-features = false, version = '2.0.0' }


# -- Pallets specific for this runtime --

[dependencies.pallet-did]
default-features = false
path = '../pallets/pallet-did'
package = 'pallet-did'

[dependencies.validatorset]
default-features = false
path = '../pallets/substrate-validator-set'
package = 'substrate-validator-set'

[dependencies.rbac]
default-features = false
path = '../pallets/substrate-rbac'
package = 'substrate-rbac'

[dependencies.registrar]
default-features = false
path = '../pallets/registrar'
package = 'pallet-registrar'

[dependencies.pallet-schema]
default-features = false 
path = '../pallets/pallet-schema'
version = '0.0.1'


# -- End of Pallets specific for this runtime --

[build-dependencies.wasm-builder-runner]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-wasm-builder-runner'
tag = 'v2.0.0-rc5'
version = '1.0.5'

[features]
default = ['std']
std = [
    'aura/std',
    'balances/std',
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'grandpa/std',
    'randomness-collective-flip/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
	'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sudo/std',
    'frame-system/std',
    'timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-did/std',
	'validatorset/std',
	'session/std',
	'rbac/std',
	'registrar/std',
    'pallet-schema/std',
]
