[package]
authors = [ 'Dhiway <info@dhiway.com>' ]
edition = '2018'
name = 'schema'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-wasm-builder-runner]
version = '1.0.6'

# pallets
# [dependencies]
# error = { version = '0.23.0', default-features = false, path = '../error' }

[dev-dependencies]
cord-runtime = { version = '0.0.1', default-features = false, path = '../../runtime' }

[dev-dependencies.sp-core]
default-features = false
version = '2.0.0-rc5'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.0'

[dependencies.frame-support]
default-features = false
version = '2.0.0-rc5'

[dependencies.frame-system]
default-features = false
version = '2.0.0-rc5'

[dev-dependencies.sp-runtime]
default-features = false
version = '2.0.0-rc5'

[dependencies.sp-std]
default-features = false
version = '2.0.0-rc5'

[dependencies.sp-io]
default-features = false
version = '2.0.0-rc5'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-timestamp'
version = '2.0.0-rc5'

[features]
default = [ 'std' ]
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'timestamp/std',
]

